Update for Calimero 3.0-SNAPSHOT